--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,22 @@
 {
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#ffffff",
+        "activityBar.activeBorder": "#df9f9f",
+        "activityBar.background": "#ffffff",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#df9f9f",
+        "activityBarBadge.foreground": "#15202b",
+        "sash.hoverBorder": "#ffffff",
+        "statusBar.background": "#f5f5dc",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#eaeab4",
+        "statusBarItem.remoteBackground": "#f5f5dc",
+        "statusBarItem.remoteForeground": "#15202b",
+        "titleBar.activeBackground": "#f5f5dc",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.inactiveBackground": "#f5f5dc99",
+        "titleBar.inactiveForeground": "#15202b99"
+    },
+    "peacock.color": "beige"
 }
