--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
         "titleBar.inactiveBackground": "#f5f5dc99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "beige"
+    "peacock.color": "beige",
+    "workbench.colorTheme": "Visual Studio 2019 Dark"
 }
