--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#ffffff",
-        "activityBar.activeBorder": "#df9f9f",
-        "activityBar.background": "#ffffff",
+        "activityBar.activeBackground": "#16c758",
+        "activityBar.activeBorder": "#8c53ec",
+        "activityBar.background": "#16c758",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#df9f9f",
-        "activityBarBadge.foreground": "#15202b",
-        "sash.hoverBorder": "#ffffff",
-        "statusBar.background": "#f5f5dc",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#eaeab4",
-        "statusBarItem.remoteBackground": "#f5f5dc",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#f5f5dc",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#f5f5dc99",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBarBadge.background": "#8c53ec",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "sash.hoverBorder": "#16c758",
+        "statusBar.background": "#119944",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#16c758",
+        "statusBarItem.remoteBackground": "#119944",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#119944",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#11994499",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "beige",
+    "peacock.color": "119944",
     "workbench.colorTheme": "Visual Studio 2019 Dark"
 }
