--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#16c758",
+        "activityBar.activeBackground": "#90a936",
         "activityBar.activeBorder": "#8c53ec",
-        "activityBar.background": "#16c758",
+        "activityBar.background": "#90a936",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#8c53ec",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#16c758",
-        "statusBar.background": "#119944",
+        "activityBarBadge.background": "#cfe8f0",
+        "activityBarBadge.foreground": "#15202b",
+        "sash.hoverBorder": "#90a936",
+        "statusBar.background": "#6f822a",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#16c758",
-        "statusBarItem.remoteBackground": "#119944",
+        "statusBarItem.hoverBackground": "#90a936",
+        "statusBarItem.remoteBackground": "#6f822a",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#119944",
+        "titleBar.activeBackground": "#6f822a",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#11994499",
+        "titleBar.inactiveBackground": "#6f822a99",
         "titleBar.inactiveForeground": "#e7e7e799",
         "commandCenter.border": "#e7e7e799"
     },
-    "peacock.color": "119944",
+    "peacock.color": "#6f822a",
     "workbench.colorTheme": "Visual Studio 2019 Dark"
 }
